<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- main_page strings -->

	<string name="app_name">Point Mapper</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="point_mapper_string">Point Mapper</string>
	<string name="explore_your_way_string">Explore your way</string>
	<string name="login_ek3_string">Login</string>
	<string name="_register_string">Register</string>
	<string name="login_ek4_string">LOGIN</string>
	<string name="abc_gmail_com_string">abc@gmail.com</string>
	<string name="username__string">Username:</string>
	<string name="password__string">Password:</string>
	<string name="password_string">Password</string>
	<string name="login_ek5_string">Login</string>
	<string name="register_ek1_string">Register</string>
	<string name="forget_password__string">forget Password?</string>
	<string name="register_ek5_string">REGISTER</string>
	<string name="full_name_string">full name</string>
	<string name="name__string">Name:</string>
	<string name="surname__string">Surname:</string>
	<string name="department_string">Department</string>
	<string name="roll_no__string">Roll NO:</string>
	<string name="email__string">Email:</string>
	<string name="last_name_string">last name</string>
	<string name="name_string">name</string>
	<string name="_18sw45_string">18sw45</string>
	<string name="abc_gmail_com_ek1_string">abc@gmail.com</string>
	<string name="submit_string">Submit</string>
	<string name="umrahzadi_abbasi_string">Umrahzadi Abbasi</string>
	<string name="muet_szab_transport_system_string">Muet szab Transport system</string>
	<string name="welcome_ek3_string">welcome</string>
	<string name="live_location_of_point_string">live location of point</string>
	<string name="details_of_point_string">Details of point</string>
	<string name="about_msts_string">About MSTS</string>
	<string name="students_feedback_string">Students Feedback</string>
	<string name="announcements_ek1_string">Announcements</string>
	<string name="emergency_contact_ek1_string">Emergency Contact</string>
	<string name="application_ek1_string">Application</string>
	<string name="routes_of_point_string">Routes of point</string>
	<string name="details_of_points_string">DETAILS  OF POINTS</string>
	<string name="sukkur_point_detail_string">Sukkur point detail</string>
	<string name="rainpur_point_detail_string">Rainpur point detail</string>
	<string name="panoaqil_point_detail_string">Panoaqil point detail</string>
	<string name="hostel_point_1_detail_string">Hostel point 1 detail</string>
	<string name="hostel_point_2_detail_string">Hostel point 2 detail</string>
	<string name="city_point_detail_string">City point detail</string>
	<string name="live_location_of_points_string">LIVE LOCATION OF POINTS</string>
	<string name="muet_szab_campus_string">Muet Szab Campus</string>
	<string name="hostel_point_1_string">Hostel point 1</string>
	<string name="panoaqil_point_string">PanoAqil Point</string>
	<string name="sukkur_point_string">Sukkur point</string>
	<string name="ranipur_point_string">Ranipur point</string>
	<string name="anouncements_string">Anouncements</string>
	<string name="no_announcement_for_yet___string">No announcement for yet!!</string>
	<string name="routes_of_points_string">Routes of points</string>
	<string name="sukkur_point_route_string">Sukkur point Route</string>
	<string name="rainpur_point_route_string">Rainpur point Route</string>
	<string name="panoaqil_point_route_string">Panoaqil point Route</string>
	<string name="hostel_point_1_route_string">Hostel point 1 Route</string>
	<string name="hostel_point_2_route_string">Hostel point 2 Route</string>
	<string name="city_point_route_string">City point Route</string>
	<string name="ali_dur_string">Ali Dur</string>
	<string name="__923023308282_string">+923023308282</string>
	<string name="_6_40_am_string">6:40 am</string>
	<string name="_8_00_am_string">8:00 am</string>
	<string name="ranipur_point_detail_string">Ranipur point detail</string>
	<string name="point_registeration_no_string">Point Registeration No</string>
	<string name="point_route_string">Point Route</string>
	<string name="driver_name_string">Driver Name</string>
	<string name="drivercontact_no_string">DriverContact No</string>
	<string name="starting_time_string">Starting Time</string>
	<string name="reaching_time_string">Reaching Time</string>
	<string name="_781t_string">781T</string>
	<string name="ranipur_to_campus_string">Ranipur to Campus</string>
	<string name="emergency_contact_ek5_string">Emergency Contact</string>
	<string name="report_breakdown_string">Report Breakdown</string>
	<string name="medical_assistant_string">Medical Assistant</string>
	<string name="report_accident_string">Report Accident </string>
	<string name="application_ek8_string">Application</string>
	<string name="enter_your_mobile_number__string">Enter your Mobile Number:</string>
	<string name="application_description_string">Application Description</string>
	<string name="enter_mobile_no__string">Enter mobile no:</string>
	<string name="enter_description_here_string">enter description here</string>
	<string name="upload_application_string">Upload Application</string>
	<string name="select_file__string">Select file:</string>
	<string name="submit_ek1_string">Submit</string>
	<string name="ranipur_point_route_string">Ranipur point Route</string>
	<string name="for_quick_rsponse_enter_these_details_string">For Quick Rsponse Enter these Details</string>
	<string name="report_breakdown_ek1_string">Report Breakdown</string>
	<string name="enter_your_mobile_number__ek1_string">Enter your Mobile Number:</string>
	<string name="enter_vehicle_no__string">Enter Vehicle No:</string>
	<string name="enter_description__string">Enter Description:</string>
	<string name="sumbit_to__rtc_msts__string">Sumbit to (RTC MSTS)</string>
	<string name="enter_mobile_no__ek1_string">Enter mobile no:</string>
	<string name="enter_vehicle_no__ek1_string">Enter Vehicle no:</string>
	<string name="enter_description_here_ek1_string">Enter description here</string>
	<string name="report_accident_ek1_string">Report Accident</string>
	<string name="for_quick_rsponse_enter_these_details_ek1_string">For Quick Rsponse Enter these Details</string>
	<string name="enter_your_mobile_number__ek2_string">Enter your Mobile Number:</string>
	<string name="enter_vehicle_no__ek2_string">Enter Vehicle No:</string>
	<string name="enter_your_family_mobile_no__string">Enter your family Mobile No:</string>
	<string name="enter_description__ek1_string">Enter Description:</string>
	<string name="sumbit_to__family___rtc_msts__string">Sumbit to (Family &amp; RTC MSTS)</string>
	<string name="enter_description_here_ek2_string">Enter description here</string>
	<string name="enter_vehicle_no__ek3_string">Enter Vehicle no:</string>
	<string name="enter_family_no__string">Enter family no:</string>
	<string name="enter_mobile_no__ek2_string">Enter mobile no:</string>
	<string name="medical_assistance_string">Medical Assistance</string>
	<string name="enter_your_mobile_number__ek3_string">Enter your Mobile Number:</string>
	<string name="enter_vehicle_no__ek4_string">Enter Vehicle No:</string>
	<string name="enter_your_family_mobile_no__ek1_string">Enter your family Mobile No:</string>
	<string name="enter_description__ek2_string">Enter Description:</string>
	<string name="for_quick_rsponse_enter_these_details_ek2_string">For Quick Rsponse Enter these Details</string>
	<string name="sumbit_to__family___rtc_msts__ek1_string">Sumbit to (Family &amp; RTC MSTS)</string>
	<string name="enter_description_here_ek3_string">Enter description here</string>
	<string name="enter_family_no__ek1_string">Enter family no:</string>
	<string name="enter_vehicle_no__ek5_string">Enter Vehicle no:</string>
	<string name="enter_mobile_no__ek3_string">Enter mobile no:</string>
	<string name="about_msts_ek1_string">About MSTS</string>
	<string name="students_feedback_ek1_string">Students Feedback</string>
	<string name="please_select_category_string">Please select category</string>
	<string name="enter_your_mobile_number__ek4_string">Enter your Mobile Number:</string>
	<string name="choose_vehcile_n0__string">choose vehcile N0:</string>
	<string name="date_of_journey__string">Date of Journey:</string>
	<string name="choose_your_feedback_here_string">Choose your feedback here</string>
	<string name="enter_mobile_no__ek4_string">Enter mobile no:</string>
	<string name="enter_vehcile_no__string">Enter Vehcile no:</string>
	<string name="dd_mm_yyyy_string">dd/mm/yyyy</string>
	<string name="good_string">Good</string>
	<string name="average_string">Average</string>
	<string name="bad_string">Bad</string>
	<string name="submit_to__msts__string">submit to (MSTS)</string>
	<string name="driver_behaviour_string">   Driver Behaviour</string>
	<string name="bus_condition_string">     Bus Condition</string>
	<string name="driving_string">Driving</string>
</resources>