<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		main_page
	 *	@date 		1656605240658
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/ranipur_point_deatail" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >







			<RelativeLayout android:id="@+id/page_ranipur_point_deatail_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__ranipur_point_deatail_ek2"
					android:background="@drawable/_bg__ranipur_point_deatail_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="640dp" />

				<View   android:id="@+id/rectangle_14"
					android:background="@drawable/rectangle_14_shape"
					 android:alpha="0.81999999284744"
					 android:layout_marginStart="-6dp"
					android:layout_marginTop="75dp"
					android:layout_width="372dp"
					android:layout_height="582dp" />

				<TextView android:id="@+id/ali_dur"
					android:fontFamily="Cabin"
					android:textSize="16sp"
					android:textColor="@color/_bg__main_page_ek2_color"
					android:layout_marginLeft="144dp"
					android:layout_marginTop="322dp"
					android:layout_width="67dp"
					android:layout_height="30dp"
					android:text="@string/ali_dur_string"
					 />

				<TextView android:id="@+id/__923023308282"
					android:fontFamily="Cabin"
					android:textSize="16sp"
					android:textColor="@color/_bg__main_page_ek2_color"
					android:layout_marginLeft="113dp"
					android:layout_marginTop="416dp"
					android:layout_width="139dp"
					android:layout_height="30dp"
					android:text="@string/__923023308282_string"
					 />

				<TextView android:id="@+id/_6_40_am"
					android:fontFamily="Cabin"
					android:textSize="16sp"
					android:textColor="@color/_bg__main_page_ek2_color"
					android:layout_marginLeft="153dp"
					android:layout_marginTop="507dp"
					android:layout_width="80dp"
					android:layout_height="30dp"
					android:text="@string/_6_40_am_string"
					 />

				<TextView android:id="@+id/_8_00_am"
					android:fontFamily="Cabin"
					android:textSize="16sp"
					android:textColor="@color/_bg__main_page_ek2_color"
					android:layout_marginLeft="162dp"
					android:layout_marginTop="593dp"
					android:layout_width="82dp"
					android:layout_height="30dp"
					android:text="@string/_8_00_am_string"
					 />

				<TextView android:id="@+id/ranipur_point_detail"
					android:fontFamily="Cabin"
					android:textSize="24sp"
					android:textColor="@color/point_mapper_color"
					android:layout_marginLeft="96dp"
					android:layout_marginTop="32dp"
					android:layout_width="230dp"
					android:layout_height="46dp"
					android:text="@string/ranipur_point_detail_string"
					 />

				<ImageView android:id="@+id/r_1_ek2"
					android:src="@drawable/r_1_ek2"
					android:contentDescription="r_1_ek2"
					 android:layout_marginStart="42dp"
					android:layout_marginTop="26dp"
					android:layout_width="51dp"
					android:layout_height="45dp" />

				<ImageView android:id="@+id/_download_1"
					android:src="@drawable/_download_1"
					android:contentDescription="_download_1"
					 android:layout_marginStart="10dp"
					android:layout_marginTop="8dp"
					android:layout_width="25dp"
					android:layout_height="26.79dp" />

				<TextView android:id="@+id/point_registeration_no"
					android:fontFamily="Cabin"
					android:textSize="24sp"
					android:textColor="@color/_bg__main_page_ek2_color"
					android:layout_marginLeft="68dp"
					android:layout_marginTop="106dp"
					android:layout_width="258dp"
					android:layout_height="46dp"
					android:text="@string/point_registeration_no_string"
					 />

				<TextView android:id="@+id/point_route"
					android:fontFamily="Cabin"
					android:textSize="24sp"
					android:textColor="@color/_bg__main_page_ek2_color"
					android:layout_marginLeft="112dp"
					android:layout_marginTop="188dp"
					android:layout_width="150dp"
					android:layout_height="46dp"
					android:text="@string/point_route_string"
					 />

				<TextView android:id="@+id/driver_name"
					android:fontFamily="Cabin"
					android:textSize="24sp"
					android:textColor="@color/_bg__main_page_ek2_color"
					android:layout_marginLeft="100dp"
					android:layout_marginTop="286dp"
					android:layout_width="159dp"
					android:layout_height="46dp"
					android:text="@string/driver_name_string"
					 />

				<TextView android:id="@+id/drivercontact_no"
					android:fontFamily="Cabin"
					android:textSize="24sp"
					android:textColor="@color/_bg__main_page_ek2_color"
					android:layout_marginLeft="91dp"
					android:layout_marginTop="379dp"
					android:layout_width="207dp"
					android:layout_height="46dp"
					android:text="@string/drivercontact_no_string"
					 />

				<TextView android:id="@+id/starting_time"
					android:fontFamily="Cabin"
					android:textSize="24sp"
					android:textColor="@color/_bg__main_page_ek2_color"
					android:layout_marginLeft="106dp"
					android:layout_marginTop="468dp"
					android:layout_width="166dp"
					android:layout_height="46dp"
					android:text="@string/starting_time_string"
					 />

				<TextView android:id="@+id/reaching_time"
					android:fontFamily="Cabin"
					android:textSize="24sp"
					android:textColor="@color/_bg__main_page_ek2_color"
					android:layout_marginLeft="111dp"
					android:layout_marginTop="554dp"
					android:layout_width="179dp"
					android:layout_height="46dp"
					android:text="@string/reaching_time_string"
					 />

				<View   android:id="@+id/line_6"
					android:background="@drawable/line_6_shape"
					 android:layout_marginStart="58dp"
					android:layout_marginTop="161dp"
					android:layout_width="241.01dp"
					android:layout_height="1dp" />

				<View   android:id="@+id/line_7"
					android:background="@drawable/line_7_shape"
					 android:layout_marginStart="55dp"
					android:layout_marginTop="250dp"
					android:layout_width="241.01dp"
					android:layout_height="1dp" />

				<View   android:id="@+id/line_8"
					android:background="@drawable/line_8_shape"
					 android:layout_marginStart="62dp"
					android:layout_marginTop="340dp"
					android:layout_width="241.01dp"
					android:layout_height="1dp" />

				<View   android:id="@+id/line_9"
					android:background="@drawable/line_9_shape"
					 android:layout_marginStart="58dp"
					android:layout_marginTop="436dp"
					android:layout_width="241.01dp"
					android:layout_height="1dp" />

				<View   android:id="@+id/line_10"
					android:background="@drawable/line_10_shape"
					 android:layout_marginStart="63dp"
					android:layout_marginTop="529dp"
					android:layout_width="241.01dp"
					android:layout_height="1dp" />

				<View   android:id="@+id/line_11"
					android:background="@drawable/line_11_shape"
					 android:layout_marginStart="72dp"
					android:layout_marginTop="613dp"
					android:layout_width="241.01dp"
					android:layout_height="1dp" />

				<TextView android:id="@+id/_781t"
					android:fontFamily="Cabin"
					android:textSize="20sp"
					android:textColor="@color/_bg__main_page_ek2_color"
					android:layout_marginLeft="148dp"
					android:layout_marginTop="137dp"
					android:layout_width="65dp"
					android:layout_height="38dp"
					android:text="@string/_781t_string"
					 />

				<TextView android:id="@+id/ranipur_to_campus"
					android:fontFamily="Cabin"
					android:textSize="16sp"
					android:textColor="@color/_bg__main_page_ek2_color"
					android:layout_marginLeft="105dp"
					android:layout_marginTop="229dp"
					android:layout_width="152dp"
					android:layout_height="30dp"
					android:text="@string/ranipur_to_campus_string"
					 />

			</RelativeLayout>






		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>