<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		main_page
	 *	@date 		1656605240658
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/accident" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >











			<RelativeLayout android:id="@+id/page_accident_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__accident_ek2"
					android:background="@drawable/_bg__accident_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="640dp" />

				<View   android:id="@+id/rectangle_15_ek1"
					android:background="@drawable/rectangle_15_ek1_shape"
					 android:alpha="0.77999997138977"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="53dp"
					android:layout_width="360dp"
					android:layout_height="84dp" />

				<View   android:id="@+id/rectangle_14_ek3"
					android:background="@drawable/rectangle_14_ek3_shape"
					 android:layout_marginStart="-8dp"
					android:layout_marginTop="87dp"
					android:layout_width="372dp"
					android:layout_height="604dp" />

				<TextView android:id="@+id/report_accident_ek1"
					android:fontFamily="Cabin"
					android:textSize="32sp"
					android:textColor="@color/point_mapper_color"
					android:layout_marginLeft="77dp"
					android:layout_marginTop="14dp"
					android:layout_width="256dp"
					android:layout_height="61dp"
					android:text="@string/report_accident_ek1_string"
					 />

				<ImageView android:id="@+id/_r_7_ek8"
					android:src="@drawable/_r_7_ek8"
					android:contentDescription="_r_7_ek8"
					 android:layout_marginStart="15dp"
					android:layout_marginTop="20dp"
					android:layout_width="25dp"
					android:layout_height="25dp" />

				<TextView android:id="@+id/for_quick_rsponse_enter_these_details_ek1"
					android:fontFamily="Inter"
					android:textSize="14sp"
					android:textColor="@color/point_mapper_color"
					android:layout_marginLeft="59dp"
					android:layout_marginTop="63dp"
					android:layout_width="272dp"
					android:layout_height="27dp"
					android:text="@string/for_quick_rsponse_enter_these_details_ek1_string"
					 />

				<View   android:id="@+id/rectangle_20_ek1"
					android:background="@drawable/rectangle_20_ek1_shape"
					 android:layout_marginStart="26dp"
					android:layout_marginTop="161dp"
					android:layout_width="270dp"
					android:layout_height="40dp" />

				<TextView android:id="@+id/enter_your_mobile_number__ek2"
					android:fontFamily="Inter"
					android:textSize="18sp"
					android:textColor="@color/point_mapper_color"
					android:layout_marginLeft="27dp"
					android:layout_marginTop="128dp"
					android:layout_width="251dp"
					android:layout_height="35dp"
					android:text="@string/enter_your_mobile_number__ek2_string"
					 />

				<TextView android:id="@+id/enter_vehicle_no__ek2"
					android:fontFamily="Inter"
					android:textSize="18sp"
					android:textColor="@color/point_mapper_color"
					android:layout_marginLeft="29dp"
					android:layout_marginTop="225dp"
					android:layout_width="169dp"
					android:layout_height="35dp"
					android:text="@string/enter_vehicle_no__ek2_string"
					 />

				<TextView android:id="@+id/enter_your_family_mobile_no_"
					android:fontFamily="Inter"
					android:textSize="18sp"
					android:textColor="@color/point_mapper_color"
					android:layout_marginLeft="29dp"
					android:layout_marginTop="319dp"
					android:layout_width="263dp"
					android:layout_height="35dp"
					android:text="@string/enter_your_family_mobile_no__string"
					 />

				<TextView android:id="@+id/enter_description__ek1"
					android:fontFamily="Inter"
					android:textSize="18sp"
					android:textColor="@color/point_mapper_color"
					android:layout_marginLeft="34dp"
					android:layout_marginTop="403dp"
					android:layout_width="175dp"
					android:layout_height="35dp"
					android:text="@string/enter_description__ek1_string"
					 />

				<View   android:id="@+id/rectangle_17_ek1"
					android:background="@drawable/rectangle_17_ek1_shape"
					 android:layout_marginStart="29dp"
					android:layout_marginTop="255dp"
					android:layout_width="270dp"
					android:layout_height="40dp" />

				<View   android:id="@+id/rectangle_21_ek1"
					android:background="@drawable/rectangle_21_ek1_shape"
					 android:layout_marginStart="29dp"
					android:layout_marginTop="349dp"
					android:layout_width="270dp"
					android:layout_height="40dp" />

				<ImageView android:id="@+id/rectangle_18_ek1"
					android:src="@drawable/rectangle_18_ek1"
					android:contentDescription="rectangle_18_ek1"
					 android:layout_marginStart="28dp"
					android:layout_marginTop="436dp"
					android:layout_width="279dp"
					android:layout_height="67dp" />


				<RelativeLayout android:id="@+id/group_1"
					android:layout_marginTop="527dp"
					android:layout_marginStart="37dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_19_ek1"
						android:background="@drawable/rectangle_19_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="281.56dp"
						android:layout_height="43dp" />

					<TextView android:id="@+id/sumbit_to__family___rtc_msts_"
						android:fontFamily="Inter"
						android:textSize="18sp"
						android:textColor="@color/_bg__main_page_ek2_color"
						android:layout_marginLeft="6dp"
						android:layout_marginTop="10dp"
						android:layout_width="326.82dp"
						android:layout_height="45.54dp"
						android:text="@string/sumbit_to__family___rtc_msts__string"
						 />

				</RelativeLayout>

				<TextView android:id="@+id/enter_description_here_ek2"
					android:fontFamily="Inter"
					android:textSize="18sp"
					android:textColor="@color/point_mapper_color"
					android:layout_marginLeft="40dp"
					android:layout_marginTop="441dp"
					android:layout_width="212dp"
					android:layout_height="35dp"
					android:text="@string/enter_description_here_ek2_string"
					 />

				<TextView android:id="@+id/enter_vehicle_no__ek3"
					android:fontFamily="Inter"
					android:textSize="18sp"
					android:textColor="@color/point_mapper_color"
					android:layout_marginLeft="45dp"
					android:layout_marginTop="264dp"
					android:layout_width="166dp"
					android:layout_height="35dp"
					android:text="@string/enter_vehicle_no__ek3_string"
					 />

				<TextView android:id="@+id/enter_family_no_"
					android:fontFamily="Inter"
					android:textSize="18sp"
					android:textColor="@color/point_mapper_color"
					android:layout_marginLeft="43dp"
					android:layout_marginTop="359dp"
					android:layout_width="155dp"
					android:layout_height="35dp"
					android:text="@string/enter_family_no__string"
					 />

				<TextView android:id="@+id/enter_mobile_no__ek2"
					android:fontFamily="Inter"
					android:textSize="18sp"
					android:textColor="@color/point_mapper_color"
					android:layout_marginLeft="41dp"
					android:layout_marginTop="170dp"
					android:layout_width="161dp"
					android:layout_height="35dp"
					android:text="@string/enter_mobile_no__ek2_string"
					 />

			</RelativeLayout>


		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>